--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "engines": {
     "node": "8.11.1"
-  }, 
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.8"
   },
